examples/test/testpolicy17141.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17141
  namespace: namespace363
spec:
  podSelector:
    matchLabels:
      key24: value29
      key11: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value41
          key19: value14
      podSelector:
        matchLabels:
          key33: value38
          key5: value35
